--- a/notebooks/us_walkability.ipynb
+++ b/notebooks/us_walkability.ipynb
@@ -1,11 +1,41 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# US Walkability"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### INTRO\n",
+    "This project is to show walkability of US cities by showing walk scores and public transit scores from hotels and hotels within different US cities. \n",
+    "End goal is to have a heat map to show a single cities information.\n",
+    "\n",
+    "Project also is to show the following:\n",
+    "- python\n",
+    "- jupyter notebooks\n",
+    "- gather data from apis\n",
+    "- cloud database\n",
+    "- psql\n",
+    "- project data science orginization\n",
+    "- version control git/github\n",
+    "- my thought process"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cloud Database\n",
+    "\n",
+    "Wanted use an online database since I might use for a portfolio and the data won't be available in the project itself\n",
+    "\n",
+    "For now went with a free db from Neon\n"
+   ]
   }
  ],
  "metadata": {
@@ -15,8 +45,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.4"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
