fix: missing words

--- a/notebooks/us_walkability.ipynb
+++ b/notebooks/us_walkability.ipynb
@@ -32,7 +32,7 @@
    "source": [
     "## Cloud Database\n",
     "\n",
-    "Wanted use an online database since I might use for a portfolio and the data won't be available in the project itself\n",
+    "Wanted too use an online database since I might use for a portfolio and the data won't be available in the project itself\n",
     "\n",
     "For now went with a free db from Neon\n"
    ]
