feat: added references

--- a/notebooks/mvp.ipynb
+++ b/notebooks/mvp.ipynb
@@ -913,7 +913,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# following two figures will not show up in pdf\n",
     "color_scale = [(0, \"red\"), (1, \"green\")]\n",
     "\n",
     "walk_fig = px.scatter_mapbox(\n",
@@ -4108,6 +4108,19 @@
     "- Comparing between states and cities \n",
     "- Other data that is included that give which to focus on\n",
     "- Data is there, better to display"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# References\n",
+    "\n",
+    "- https://www.walkscore.com/professional/research.php\n",
+    "- https://plotly.com/python/scattermapbox/\n",
+    "- https://github.com/DmitryPavlyuk/python-da/tree/main\n",
+    "- https://bard.google.com/chat\n"
    ]
   }
  ],
